--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="student_time"></p>
 
   <script>
-    const API_URL = "https://REGION-PROJECT.cloudfunctions.net/time_api"; 
+    const API_URL = "https://hora-profesor-alumno-boton-187339689223.us-south1.run.app";
     // Reemplaza con tu URL real
 
     async function setTeacherTime() {
