--- a/participante.html
+++ b/participante.html
@@ -51,19 +51,19 @@
 
       clickCount++;
       // Si hace más de 3 clicks, pedir confirmación
-      if (clickCount > 2) {
+      if (clickCount > 8) {
   const messages = [
-    "no spamees el botón",
+    "no spamees el boton",
     "escribe continuar para seguir",
     "respeta las reglas",
     "detente un momento",
-    "ahora sí puedes continuar"
+    "ahora si puedes continuar"
   ];
 
   for (let i = 0; i < messages.length; i++) {
     let input = "";
     while (input.trim().toLowerCase() !== messages[i]) {
-      input = prompt(`Mensaje ${i + 1}: ${messages[i]}`);
+      input = prompt(`NO PRESIONES SEGUIDO EL BOTÓN! Escribe el siguiente texto para continuar: ${i + 1}: ${messages[i]}`);
     }
   }
 
